crates/aura-macros/tests/boundaries/semantic_owner_missing_terminal_path.stderr
error: semantic_owner requires sanctioned terminal path `publish_done` to appear in the function body
  --> tests/boundaries/semantic_owner_missing_terminal_path.rs:16:3
   |
16 |   ) {
   |  ___^
17 | |     let _ = 1usize;
18 | | }
   | |_^

warning: unused imports: `OperationContext` and `TraceContext`
 --> tests/boundaries/semantic_owner_missing_terminal_path.rs:1:17
  |
1 | use aura_core::{OperationContext, TraceContext};
  |                 ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
